force-app/main/default/objects/FM_API__mdt/FM_API__mdt.object-meta.xml
<CustomObject>
    <description>This is used to store details required for making API calls to Postgres</description>
    <label>FM_API</label>
    <pluralLabel>FM_APIs</pluralLabel>
</CustomObject>