force-app/main/default/objects/FM_API__mdt/fields/Client_secret__c.field-meta.xml
<CustomField>
    <fullName>Client_secret__c</fullName>
    <label>Client_secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>