force-app/main/default/objects/FM_API__mdt/fields/Scopes__c.field-meta.xml
<CustomField>
    <fullName>Scopes__c</fullName>
    <label>Scopes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>