force-app/main/default/objects/FM_API__mdt/fields/Token_url__c.field-meta.xml
<CustomField>
    <fullName>Token_url__c</fullName>
    <label>Token_url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>